# vision-chess

./: .gitignore  README.md  TODO.md  config-h100.yaml  config-t4.yaml  config-test.yaml  config-tune.yaml  config.yaml  default-settings.toml  pyproject.toml  settings.toml
chessgpt/: main.py  pgn_to_npy.py  pgn_to_npz.py
chessgpt/model/: config.py  data.py  dataset.py  feedforward.py  tokenizer.py  transformer.py
tests/: test_dataset.py  test_feedforward.py  test_tokenizer.py
vision/: main.py  pgn_to_npy.py  run.py  stats.py  train.py  tune.py  utils.py
vision/model/: config.py  data.py  datamodule.py  tokenizer.py  transformer.py
vision/model/config/: __init__.py  default.py  test.py  tune.py
