[project]
name = "chessgpt"
version = "0.1.0"
description = "Train transformers to play chess"
authors = [
    {name = "anthonyiscoding",email = "142696453+anthonyiscoding@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pgn-parser (>=1.1.0,<2.0.0)",
    "chess (>=1.11.2,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
