[project]
name = "vision"
version = "0.1.0"
description = "Train transformers to play chess"
authors = [
    {name = "anthonyiscoding",email = "142696453+anthonyiscoding@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pgn-parser (>=1.1.0,<2.0.0)",
    "chess (>=1.11.2,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "torchtune (>=0.6.1,<0.7.0)",
    "torchao (>=0.12.0,<0.13.0)",
    "pyarrow (==20)",
    "numpy (>=2.3.2,<3.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "lightning (>=2.5.3,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "optuna-integration[pytorch-lightning] (>=4.5.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
optuna = "^4.5.0"
optuna-dashboard = "^0.19.0"

